--- a/app/views/layouts/_user_top_bar.html.erb
+++ b/app/views/layouts/_user_top_bar.html.erb
@@ -1,6 +1,7 @@
-<% if !current_user and !current_admin %>
+<% if !current_user %>
 	<%= link_to "Login", new_user_session_path, :title => "Login" %> / 
-	<%= link_to "Sign Up", new_user_registration_path, :title => "Sign Up" %>
+	<%= link_to "Sign Up", new_users_path, :title => "Sign Up" %>
+	<%= link_to "Partner Sign Up", new_users_path(:type => "Partner"), :title => "Partner Sign Up" %>
 <% else %>
-	<%= link_to "Logout", :controller => '/users', :action => 'sign_out' %>
+	<%= link_to "Logout", user_session_path, :method => :delete %>
 <% end %>
