--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,20 +1,23 @@
 <h2>Sign up</h2>
 
-<% form_for resource_name, resource, :url => registration_path(resource_name) do |f| -%>
+<% form_for @user, :user, users_path(@user) do |f| -%>
   <%= f.error_messages %>
 
   <%= f.label :email %> <%= f.text_field :email %><br/>
   <%= f.label :password %> <%= f.password_field :password %><br/>
   <%= f.label :password_confirmation %> <%= f.password_field :password_confirmation %><br/>
-  First Name <%= f.text_field :firstname %><br/>
+	First Name <%= f.text_field :firstname %><br/>
 	Last Name <%= f.text_field :lastname %><br/>
 	URL Slug <%= f.text_field :url_slug %><br/>
-	Gender <%= f.text_field :gender %><br/>
-	Birthdate <%= f.date_select :birthdate %><br/>
 	Country <%= f.text_field :country_id %><br/>
 	Province <%= f.text_field :province %><br/>
+	<% if params[:type] == "Partner" %>
+		<%= render :partial => 'partner_form', :locals => {:f => f} %>
+	<% else %>
+		Gender <%= f.text_field :gender %><br/>
+		Birthdate <%= f.date_select :birthdate %><br/>
+	<% end %>
 	<%= recaptcha_tags :public_key => @setting.recaptcha_public_key if @setting %>
+	<%= f.hidden_field :type, :value => params[:type] %>
   <p><%= f.submit "Sign up" %></p>
 <% end -%>
-
-<%= render :partial => "shared/devise_links" %>
