--- a/app/views/user_mailer/forgot_password.html.erb
+++ b/app/views/user_mailer/forgot_password.html.erb
@@ -1,3 +1,3 @@
 Forgot your password?
 
-Click here to <%= link_to "reset your password", "/users/reset_password/#{@key}" %>.
+Click here to <%= link_to "reset your password", edit_password_reset_url(@key) %>.
