--- a/app/views/layouts/main.html.erb
+++ b/app/views/layouts/main.html.erb
@@ -3,15 +3,20 @@
 <html>
 	<head>
 		<%=javascript_include_tag(:defaults) %>
+		<%=stylesheet_link_tag('main') %>
 	</head>
 	<body>
-		<%= render :partial => 'layouts/user_top_bar'%>
-		<div id="error"></div>
-		<%= render :partial => 'layouts/top_nav' %>
-		<div id="content">
-	       <p class="notice"><%= flash[:notice] %></p>
-	       <p class="alert"><%= flash[:alert] %></p>
-			<%= yield %>
+		<%= render :partial => 'layouts/header'%>
+		<div id="page">
+			<div id="page_content">
+				<div id="error"></div>
+				<div id="content">
+			       <p class="notice"><%= flash[:notice] %></p>
+			       <p class="alert"><%= flash[:alert] %></p>
+					<%= yield %>
+				</div>
+			</div>
+			<%= render :partial => 'layouts/circles' %>
 		</div>
 		<%= render :partial => 'layouts/footer' %>
 	</body>
