--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -5,7 +5,7 @@
 			<div><%= link_to "About", about_path %></div>
 			<div><%= link_to "How it Works", how_path %></div>
 			<div><%= link_to "Get Involved", involved_path %></div>
-			<div><%= link_to "Contact", contact_path %></div>
+			<div><%= link_to "Contact", "mailto:contact@unitechange.org" %></div>
 		</div>
 		&copy; 2010 UniteChange.org | 
 		<%= link_to "Terms of Service", terms_of_service_path %> | 
