--- a/app/views/welcome/involved.html.erb
+++ b/app/views/welcome/involved.html.erb
@@ -28,4 +28,6 @@
 		<div class="involved_label">Funding Needed:</div>
 		<div class="involved_values">$82,000</div>
 	</div>
+		
+	<p><a href="https://www.wepay.com/donate/start/2374"><img src="https://www.wepay.com/img/widgets/donate_with_wepay.png" alt="Pay on WePay" height="40" width="240" /></a></p>
 </div>
