--- a/app/views/layouts/admin/_nav.html.erb
+++ b/app/views/layouts/admin/_nav.html.erb
@@ -1,2 +1,3 @@
 <%= link_to "Users", admin_users_path %> / 
+<%= link_to "Pages", admin_pages_path %> / 
 <%= link_to "Settings", admin_settings_path %>
