--- a/app/views/layouts/main.html.erb
+++ b/app/views/layouts/main.html.erb
@@ -2,6 +2,10 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html>
 	<head>
+		<title><%= yield(:html_title) %></title>
+		<meta name="description" content="<%= yield(:meta_description) %>">
+		<meta name="keywords" content="<%= yield(:meta_keywords) %>">
+		
 		<%=javascript_include_tag(:defaults) %>
 		<%=stylesheet_link_tag('main') %>
 	</head>
