--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -7,6 +7,8 @@
 				<%= link_to "Sign In", new_user_session_path, :title => "Sign In" %>
 	<!--			<%= link_to "Partner Sign Up", new_users_path(:type => "Partner"), :title => "Partner Sign Up" %> -->
 			<% else %>
+				Welcome <%= current_user.firstname %> | 
+				<%= link_to "My Account", edit_users_path %> | 
 				<%= link_to "Logout", user_session_path, :method => :delete %>
 			<% end %>
 		</div>
