--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,25 +1,16 @@
-<h2>Edit <%= resource_name.to_s.humanize %></h2>
+<div id="my_account">
+	<h2>My Account Settings</h2>
 
-<% form_for resource_name, resource, :url => registration_path(resource_name), :html => { :method => :put } do |f| -%>
-  <%= f.error_messages %>
+	<h3>Profile:</h3>
+	<% form_for @user, :user, :url => users_path(@user), :html => { :method => :put } do |f| -%>
+	  <%= f.error_messages %>
 
-  <p><%= f.label :email %></p>
-  <p><%= f.text_field :email %></p>
+	  <p>First Name: <%= f.text_field :firstname %></p>
+	  <p>Last Name: <%= f.text_field :lastname %></p>
+	  <p>Email Address: <%= f.text_field :email %></p>
+	  <p>New Password: <%= f.password_field :password %></p>
+	  <p>Re-enter Password: <%= f.password_field :password_confirmation %></p>
 
-  <p><%= f.label :password %> <i>(leave blank if you don't want to change it)</i></p>
-  <p><%= f.password_field :password %></p>
-
-  <p><%= f.label :password_confirmation %></p>
-  <p><%= f.password_field :password_confirmation %></p>
-
-  <p><%= f.label :current_password %> <i>(we need your current password to confirm your changes)</i></p>
-  <p><%= f.password_field :current_password %></p>
-
-  <p><%= f.submit "Update" %></p>
-<% end -%>
-
-<h3>Cancel my account</h3>
-
-<p>Unhappy? <%= link_to "Cancel my account", registration_path(resource_name), :confirm => "Are you sure?", :method => :delete %>.</p>
-
-<%= render :partial => "shared/devise_links" %>
+	  <p><%= f.submit "Save" %></p>
+	<% end -%>
+</div>
